<resources>
    <string name="app_name">AMTEL app</string>
    <string name="profile">Účet</string>
    <string name="results">Pořadí</string>
    <string name="schedule">Přehled utkání</string>
    <string name="teams">Týmy</string>
    <string name="players">Hráči</string>
    <string name="email">Email</string>
    <string name="password">Heslo</string>
    <string name="account">Účet</string>
    <string name="login">Přihlášení</string>
    <string name="user_login_success_title">Přihlášení proběhlo úspěšně</string>
    <string name="user_login_success_message">Vítejte!\n\nZdá se, že jste se přihlásil/a poprvé. Jako první prosím vyplňte Vaše osobní údaje v sekci:\n\nÚčet > OSOBNÍ.\n\nZákladní tipy a rady pro organizaci vlastního týmu naleznete v sekci \'Zpravodaje\'.</string>
    <string name="user_login_failure_title">Přihlášení se nezdařilo</string>
    <string name="user_login_failure_message">Zadali jste neplatnou kombinaci emailu a hesla.</string>
    <string name="invalidEmail_error">Zadejte prosím validní email.</string>
    <string name="invalidPassword_error">Vyplňte prosím heslo.</string>
    <string name="logout">Odhlášení</string>
    <string name="logout_message">Opravdu se chcete odhlásit?</string>
    <string name="yes">ANO</string>
    <string name="no">NE</string>
    <string name="ok">OK</string>
    <string name="name">Jméno</string>
    <string name="surname">Příjmení</string>
    <string name="deadline">Deadline</string>
    <string name="invalidSurname_error">Vyplňte prosím příjmení.</string>
    <string name="invalidName_error">Vyplňte prosím jméno.</string>
    <string name="user_registration_success_title">Uživatel byl úspěšně přidán</string>
    <string name="user_registration_failure_title">Registrace se nepovedla</string>
    <string name="user_registration_failure_message">Uživatel již byl zaregistrován v minulosti.</string>
    <string name="user_registration_confirmation_title">Opravdu chcete přidat tohoto uživatele?</string>
    <string name="verificationEmail_subject">Byl vám udělen přístup do aplikace AMTEL Opava</string>
    <string name="user_registration_success_message">Bude odeslán automatický email vedoucímu týmu.</string>
    <string name="account_boss_adapter_add_TM">Vedoucí</string>
    <string name="account_boss_adapter_make_groups">Skupiny</string>
    <string name="account_adapter_personal">Osobní</string>
    <string name="account_tm_adapter_make_team">Soupiska</string>
    <string name="new_password">Nové heslo</string>
    <string name="change_password">Změnit heslo</string>
    <string name="add_tm">Přidat vedoucího týmu</string>
    <string name="set_deadline">Zvolit termín odevzdání soupisky</string>
    <string name="password_change_success_title">Heslo bylo změněno</string>
    <string name="password_change_failure_title">Heslo se nepodařilo změnit</string>
    <string name="password_change_failure_message">Zkuste se prosím odhlásit a pak znovu přihlásit.</string>
    <string name="password_change_confirmation_title">Opravdu chcete změnit heslo?</string>
    <string name="autoEmail_template_head">Dobrý den,\nbyl Vám udělen přístup do aplikace AMTEL Opava. Vaše přiřazená role je vedoucí týmu. Pro přihlášení zadejte v aplikaci následující kombinaci:\n\n</string>
    <string name="autoEmail_template_foot">Heslo Vám bylo náhodně vygenerováno. Můžete si jej změnit v aplikaci.\n\nS přáním příjemného dne,\nAdministrátor aplikace AMTEL Opava\n\nPoznámka: Tento email je automaticky vygenerovaný, neodpovídejte na něj prosím.</string>
    <string name="personal_information">Osobní údaje</string>
    <string name="birthdate">Datum narození</string>
    <string name="phone_number">Telefonní číslo</string>
    <string name="man">Muž</string>
    <string name="woman">Žena</string>
    <string name="phoneNumber_change_error">Zadejte prosím platné telefonní číslo i s předponou.</string>
    <string name="personalInfo_change_success_title">Osobní údaje byly úspěšně uloženy.</string>
    <string name="personalInfo_change_failure_title">Osobní údaje se nepodařilo uložit.</string>
    <string name="court_address">Adresa kurtu</string>
    <string name="playing_days">Hrací dny</string>
    <string name="create_team">Vytvořit tým</string>
    <string name="sign_out">Odhlásit se</string>
    <string name="add_player">Přidat hráče</string>
    <string name="add_team_success_title">Tým byl úspěšně vytvořen</string>
    <string name="add_team_failure_title">Chyba při tvorbě týmu</string>
    <string name="add_team_actualization_title">Tým byl úspěšně aktualizován</string>
    <string name="create_team_failure_name_error">Vyplňte prosím jméno.</string>
    <string name="create_team_failure_place_error">Vyplňte prosím adresu kurtu.</string>
    <string name="create_team_failure_days_error">Vyplňte prosím hrací dny.</string>
    <string name="birthdate_failure_message_bad_format">Vyplňte prosím datum narození</string>
    <string name="birthdate_failure_message_invalid">Datum narození neodpovídá realitě.</string>
    <string name="phoneNumber_invalid_message">Zadejte prosím platné telefonní číslo i s předvolbou.</string>
    <string name="password_invalid_empty_message">Vyplňte prosím heslo.</string>
    <string name="password_invalid_short_message">Heslo musí mít minimálně 6 znaků.</string>
    <string name="email_failure_message">Zadejte prosím validní email.</string>
    <string name="add_user_success_message_title">Hráč byl úspěšně přidán do týmu</string>
    <string name="add_user_failure_message_title">Hráče se nepodařilo přidat</string>
    <string name="delete_user_confirmation_message">Opravdu chcete smazat hráče?</string>
    <string name="create_team_dialog_title">Jste si jistý/á?</string>
    <string name="create_team_dialog_message">Název týmu již nepůjde změnit. Zbytek můžete změnit libovolněkrát.</string>
    <string name="full_name">Jméno a příjmení</string>
    <string name="full_name_placeholder">%1$s %2$s</string>
    <string name="invalid_fullName_error">Vyplňte prosím jméno a příjmení</string>
    <string name="group_name">Název skupiny</string>
    <string name="create_group">Vytvořit skupinu</string>
    <string name="show_groups">Zobrazit skupiny</string>
    <string name="group_name_error_message">Vyplňte prosím název skupiny</string>
    <string name="create_group_success_title">Skupina byla úspěšně vytvořena.</string>
    <string name="create_group_failure_title">Skupina již existuje.</string>
    <string name="choose_group">Vyberte skupinu</string>
    <string name="choose_group_input">Vybrat skupinu pro tým %1$s</string>
    <string name="groups">Skupiny</string>
    <string name="generate_plan">Generovat utkání</string>
    <string name="generate_group_error_text">Zadejte prosím celé liché kladné číslo, které není menší než %1$d.</string>
    <string name="rounds_number">Počet kol</string>
    <string name="show_group">zobrazit skupinu</string>
    <string name="not_working_yet">Tato možnost není zatím funkční</string>
    <string name="rounds_overview">Přehled kol</string>
    <string name="round">kolo</string>
    <string name="no_rounds_text">Skupina neobsahuje žádné utkání.</string>
    <string name="group">Skupina</string>
    <string name="week_failure_empty_text">Vyplňte prosím týden v roce.</string>
    <string name="week_failure_not_number_text">Vyplňte prosím týden v roce jako číslo.</string>
    <string name="week_failure_invalid_text">Týden v roce může nabývat hodnot 1–53.</string>
    <string name="successfully_generated">byla úspěšně vygenerována.</string>
    <string name="monday">pondělí</string>
    <string name="tuesday">úterý</string>
    <string name="wednesday">středa</string>
    <string name="thursday">čtvrtek</string>
    <string name="friday">pátek</string>
    <string name="saturday">sobota</string>
    <string name="sunday">neděle</string>
    <string name="team">Tým</string>
    <string name="was_moved_to_group">byl přesunut do skupiny</string>
    <string name="match">zápas</string>
    <string name="match_input">Zápis utkání</string>
    <string name="match_result">Výsledek utkání</string>
    <string name="no_team_alert">Prvně prosím vytvořte tým.</string>
    <string name="match_arrangement">Domluva utkání</string>
    <string name="amtel_opava">AMTEL Opava</string>
    <string name="match_dateTime_change_success">Datum a čas zápasu byly úspěšně změněny.</string>
    <string name="change_place_match">Nastavit místo utkání</string>
    <string name="change_dateTime_match">Nastavit datum a čas utkání</string>
    <string name="match_place_change_success">Místo utkání bylo úspěšně změněno.</string>
    <string name="choose_playing_days">Zvolit hrací dny</string>
    <string name="choose_players">Zvolit hráče</string>
    <string name="choose_player_home_team">Zvolit hráče domácího týmu</string>
    <string name="choose_player_away_team">Zvolit hráče týmu hostů</string>
    <string name="fifty_plus_group">50+</string>
    <string name="games_invalid_rules_error">Počet gemů v setu neodpovídá pravidlům.</string>
    <string name="empty_players_error">Zadejte prosím hráče.</string>
    <string name="match_input_confirmation_text">Zapsat výsledek půjde již jenom jednou.</string>
    <string name="match_tie_warning">Stav na sety odpovídá 1:1.</string>
    <string name="match_input_confirmation_last_attempt_text">Máte poslední pokus na zapsání výsledku.</string>
    <string name="match_added_success">Zápas byl úspěšně přidán.</string>
    <string name="email_password_key">EMAIL_PASSWORD</string>
    <string name="aes_key">1Hbfh667adfDEJ78</string>
    <string name="regenerate_matches">přegenerovat utkání</string>
    <string name="generate_matches_dialog_title">Zadejte počet kol ve skupině</string>
    <string name="number_teams">Počet týmů: %1$d</string>
    <string name="too_many_gems_error">Počet gemů nesmí být více než %1$d.</string>
    <string name="too_many_points_error">Počet bodů nesmí být více než %1$d.</string>
    <string name="too_little_gems_error">Počet gemů nesmí být záporné číslo.</string>
    <string name="gems_empty_error">Zadejte prosím počet získaných gemů.</string>
    <string name="gems_not_number_error">Zadejte prosím skóre v číselné podobě.</string>
    <string name="server_error_email_noTmAdded">Chyba serveru, vedoucí týmu nebude přidán.</string>
    <string name="head_of_league">HEAD_OF_LEAGUE</string>
    <string name="match_input_email">Dobrý den,\n\nvedoucí týmu %1$s právě zadal do aplikace výsledek %2$d. zápasu v utkání %3$s–%4$s ze dne %5$s.\n\nSkóre je: %6$s na sety a %7$s na gemy.\nHráči: %8$s a %9$s.\n\nNa tento email prosím neodpovídejte.\n\nAdministrátor aplikace AMTEL Opava</string>
    <string name="match_input_email_headOfLeague">Dobrý den,\n\nvedoucí soutěže právě zadal do aplikace výsledek %1$d. zápasu v utkání %2$s–%3$s ze dne %4$s.\n\nSkóre je: %5$s na sety a %6$s na gemy.\nHráči: %7$s a %8$s.\n\nNa tento email prosím neodpovídejte.\n\nAdministrátor aplikace AMTEL Opava</string>
    <string name="unspecified">nespecifikováno</string>
    <string name="send_email">Poslat email</string>
    <string name="send_email_opponent">Napsat email soupeři</string>
    <string name="call_opponent">Zavolat soupeři</string>
    <string name="write_email">Napsat email</string>
    <string name="call">Zavolat</string>
    <string name="rounds_number_input">Počet kol: %1$s</string>
    <string name="actual_round">Aktuální kolo: %1$s</string>
    <string name="is_not">není</string>
    <string name="confirm_password">Potvrďte heslo</string>
    <string name="password_invalid_no_match">Hesla se neshodují.</string>
    <string name="new_player">Nový hráč</string>
    <string name="generate_matches_in_groups">Vygenerovat utkání ve skupinách</string>
    <string name="birthdate_unknown">datum narození neznámé</string>
    <string name="home">domácí</string>
    <string name="away">hosté</string>
    <string name="place_not_found">Místo není uvedeno</string>
</resources>