<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/account_boss_add_tm_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/curve" />

        <RelativeLayout
            android:id="@+id/account_boss_add_tm"
            style="@style/CardRelativeLayout">

                <TextView
                    android:id="@+id/account_boss_add_tm_text"
                    style="@style/TextViewTitle"
                    android:text="@string/add_tm" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/account_boss_add_tm_name"
                    android:layout_below="@+id/account_boss_add_tm_text"
                    android:hint="@string/name"
                    style="@style/TextInputLayout"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/account_boss_add_tm_editText1"
                        style="@style/TextInputEditTextStyle"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/account_boss_add_tm_surname"
                    style="@style/TextInputLayout"
                    android:layout_below="@id/account_boss_add_tm_name"
                    android:hint="@string/surname"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/account_boss_add_tm_editText2"
                        style="@style/TextInputEditTextStyle"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/account_boss_add_tm_email"
                    style="@style/TextInputLayout"
                    android:layout_below="@id/account_boss_add_tm_surname"
                    android:hint="@string/email"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/account_boss_add_tm_editText3"
                        style="@style/TextInputEditTextStyle"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/account_boss_add_tm_add"
                    style="@style/FloatingActionButton"
                    android:layout_below="@id/account_boss_add_tm_email"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="8dp"
                    app:srcCompat="@drawable/ic_add_white_24dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/account_boss_deadline"
            android:layout_below="@id/account_boss_add_tm"
            style="@style/CardRelativeLayout">

                <TextView
                    android:id="@+id/account_boss_deadline_text"
                    style="@style/TextViewTitle"
                    android:layout_marginBottom="8dp"
                    android:text="@string/set_deadline" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/account_boss_add_deadline_date"
                    style="@style/TextInputLayout"
                    android:layout_below="@id/account_boss_deadline_text"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/deadline"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/account_boss_add_deadline_ediText1"
                        style="@style/TextInputEditTextStyle"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="date" />

                </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>