<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.AddUserToTeamActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/veryVeryLightGrey">

            <include layout="@layout/curve" />

            <RelativeLayout
            android:id="@+id/account_personal_personal_information"
            style="@style/CardRelativeLayout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/account_add_user_to_team_title"
                    style="@style/TextViewTitle"
                    android:text="@string/new_player" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/account_add_user_to_team_name"
                    android:layout_below="@id/account_add_user_to_team_title"
                    style="@style/TextInputLayout"
                    android:hint="@string/name"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/account_add_user_to_team_name_editText"
                        style="@style/TextInputEditTextStyle"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/account_add_user_to_team_surname"
                    style="@style/TextInputLayout"
                    android:layout_below="@id/account_add_user_to_team_name"
                    android:hint="@string/surname"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/account_add_user_to_team_surname_editText"
                        style="@style/TextInputEditTextStyle"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/account_add_user_to_team_email"
                    style="@style/TextInputLayout"
                    android:layout_below="@id/account_add_user_to_team_surname"
                    android:hint="@string/email"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/account_add_user_to_team_email_editText"
                        style="@style/TextInputEditTextStyle"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/account_add_user_to_team_birthdate"
                    style="@style/TextInputLayout"
                    android:layout_below="@id/account_add_user_to_team_email"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/birthdate"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/account_add_user_to_team_birthdate_editText"
                        style="@style/TextInputEditTextStyle"
                        android:inputType="date"
                        android:clickable="true"
                        android:focusable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/account_add_user_to_team_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/account_add_user_to_team_birthdate">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/account_add_user_to_team_sex_man"
                        android:text="@string/man"
                        android:paddingEnd="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:textColor="@color/radio_button"
                        android:theme="@style/CheckBoxStyle"
                        tools:ignore="RtlSymmetry" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/account_add_user_to_team_sex_woman"
                        android:text="@string/woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/CheckBoxStyle"
                        android:textColor="@color/radio_button"
                        android:layout_weight="1" />

                </RadioGroup>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/account_add_user_to_team_add_button"
                    style="@style/FloatingActionButton"
                    android:layout_below="@id/account_add_user_to_team_sex"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="8dp"
                    app:srcCompat="@drawable/ic_add_white_24dp" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>