<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/account_boss_create_group"
            style="@style/CardRelativeLayout">

            <TextView
                android:id="@+id/account_boss_create_group_text"
                style="@style/TextViewTitle"
                android:text="@string/create_group" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_boss_create_group_name"
                style="@style/TextInputLayout"
                android:layout_below="@id/account_boss_create_group_text"
                android:hint="@string/group_name"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_boss_create_group_ediText1"
                    style="@style/TextInputEditTextStyle"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/account_boss_create_group_add"
                style="@style/FloatingActionButton"
                android:layout_below="@id/account_boss_create_group_name"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/ic_add_white_24dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/account_boss_create_group_show_groups"
            style="@style/CardRelativeLayout"
            android:layout_below="@id/account_boss_create_group">

            <TextView
                android:id="@+id/account_boss_create_group_show_groups_text"
                style="@style/TextViewInClickableLayout"
                android:text="@string/show_groups" />

            <ImageView
                android:id="@+id/account_boss_create_group_show_groups_button"
                style="@style/ImageViewInClickableLayout"
                android:background="@drawable/ic_navigate_next_blue_24dp"
                android:scaleX="1.5"
                android:scaleY="1.5" />

        </RelativeLayout>

        <TextView
            android:id="@+id/account_boss_create_group_teams_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_boss_create_group_show_groups"
            android:layout_marginStart="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginEnd="@dimen/card_margin"
            android:gravity="center"
            android:text="@string/teams"
            android:textColor="@color/darkGrey"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/account_boss_create_group_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="400dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_below="@id/account_boss_create_group_teams_text"/>

    </RelativeLayout>


</ScrollView>