<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".activities.AddUserToTeamActivity">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/horizontal_line_add_user"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey"
            android:layout_below="@id/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_add_user_to_team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_line_add_user"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/name"
            app:errorEnabled="true"
            app:errorTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_add_user_to_team_name_editText"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_add_user_to_team_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_add_user_to_team_name"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/surname"
            app:errorEnabled="true"
            app:errorTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_add_user_to_team_surname_editText"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_add_user_to_team_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_add_user_to_team_surname"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:errorTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_add_user_to_team_email_editText"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_add_user_to_team_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_add_user_to_team_email"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/birthdate"
            app:errorEnabled="true"
            app:errorTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_add_user_to_team_birthdate_editText"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/account_add_user_to_team_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/account_add_user_to_team_birthdate"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/account_add_user_to_team_sex_man"
                android:text="@string/man"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textColor="@color/radio_button"
                android:theme="@style/CheckBoxStyle"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/account_add_user_to_team_sex_woman"
                android:text="@string/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/CheckBoxStyle"
                android:textColor="@color/radio_button"
                android:layout_weight="1" />

        </RadioGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/account_add_user_to_team_add_button"
            style="@style/FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            app:srcCompat="@drawable/ic_add_white_24dp" />

    </RelativeLayout>

</ScrollView>